# radclock

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  configure.in  copyright  version.sh
autotools/: copyright-header.txt  remove_comments.sed
debian/: README.Debian  changelog  control  copyright  docs  radclock.init  rules
examples/: Makefile.am  radclock_capture_packet.c  radclock_get_time.c  radclock_pps.c
kernel/: README.freebsd  README.linux  README.raspbian
kernel/freebsd/FreeBSD-6.2/: RADCLOCK.amd64  RADCLOCK.i386  RADclock-FreeBSD-6.2.patch  bpf.c  bpf.h  bpfdesc.h  if_ethersubr.c  kern_tc.c  options.amd64  options.i386  radclock.c  time.h  timepps.h
kernel/freebsd/FreeBSD-7.0/: RADCLOCK.amd64  RADCLOCK.i386  RADclock-FreeBSD-7.0.patch  bpf.c  bpf.h  bpfdesc.h  if_ethersubr.c  kern_tc.c  options.amd64  options.i386  time.h
kernel/freebsd/FreeBSD-7.1/: Makefile  RADCLOCK.amd64  RADCLOCK.i386  RADclock-FreeBSD-7.1.patch  bpf.c  bpf.h  bpfdesc.h  if_ethersubr.c  kern_tc.c  options.amd64  options.i386  time.h  timepps.h
kernel/freebsd/FreeBSD-7.2/: RADCLOCK.amd64  RADCLOCK.i386  RADclock-FreeBSD-7.2.patch  bpf.c  bpf.h  bpfdesc.h  if_ethersubr.c  kern_tc.c  radclock.c  time.h  timepps.h
kernel/freebsd/FreeBSD-7.3/: RADclock-FreeBSD-7.3.patch  bpf.c  bpf.h  if_em.c  kern_tc.c  options.amd64  options.i386  time.h
kernel/freebsd/FreeBSD-7.4-RELEASE/: 01-conf-options.patch  02-radclock-core.patch  03-radclock-timecounter.patch  04-radclock-bpf.patch  05-radclock-timepps.patch  06-radclock-xen.patch  07-em-driver.patch  README  series
kernel/freebsd/FreeBSD-8.0/: RADCLOCK.i386  RADclock-FreeBSD-8.0.patch  bpf.c  bpf.h  bpfdesc.h  if_em.c  if_ethersubr.c  kern_tc.c  radclock.c  time.h
kernel/freebsd/FreeBSD-8.1/: RADclock-FreeBSD-8.1.patch  bpf.c  bpf.h  bpfdesc.h  clock.c  if_em.c  if_ethersubr.c  kern_tc.c  options.amd64  options.i386  radclock.c  timepps.h  timetc.h
kernel/freebsd/FreeBSD-9.0/: 08-fix-mtap-call-em-driver.patch  227776.patch  227789.patch  227986.patch  228118.patch  228123.patch  228173.patch  228986.patch  bpf-extras-ffcounter.patch  bpf-extras.patch  sdt_probe_if_em.patch  series
kernel/freebsd/FreeBSD-9.0-RELEASE/: 08-fix-mtap-call-em-driver.patch  08-fix-mtap-call-igb-driver.patch  227723.patch  227745.patch  227747.patch  227776.patch  227789.patch  227986.patch  228115.patch  228117.patch  228118.patch  228123.patch  228125.patch  228173.patch  228174.patch  228856.patch  228986.patch  bpf-extras-01.patch  bpf-extras-02-ffcounter.patch  bpf-extras-ffcounter.patch  bpf-extras.patch  fix-rate-error-loop.patch  sdt_probe_if_em.patch  sdt_probe_if_igb.patch  series
kernel/freebsd/FreeBSD-9.0-RELENG/: 227723.patch  227745.patch  227747.patch  227776.patch  227789.patch  227986.patch  228115.patch  228117.patch  228118.patch  228123.patch  228125.patch  228173.patch  228174.patch  228856.patch  228986.patch  bpf-extras-01.patch  bpf-extras-02-ffcounter.patch  series
kernel/freebsd/FreeBSD-CURRENT/: 00-bintime-macro.patch  01-ffclock-core.patch  02-ffclock-time.patch  02-ffclock-uland-interface.patch  03-ffclock-bpf.patch  03-ffclock-uland-interface.patch  03-system-clock.patch  04-ffclock-bpf.patch  04-ffclock-ppsapi.patch  04-ffclock-uland-interface.patch  05-ffclock-bpf.patch  05-ffclock-ppsapi.patch  05-ffclock-xen.patch  06-ffclock-ppsapi.patch  06-ffclock-xen.patch  06-fix-mtap-call-em-driver.patch  07-counter-latency.patch  07-ffclock-xen.patch  07-fix-mtap-call-em-driver.patch  08-counter-latency.patch  08-fix-mtap-call-em-driver.patch  RADclock-FreeBSD-CURRENT.patch  series
kernel/freebsd/libc-CURRENT/: 01-ffclock-syscalls-libc.path  series
kernel/linux/2.6.26/: 0001-Module-RADclock-driver.patch  0002-Clocksource-raw-virtual-counter.patch  0003-RADclock-ioctl-definitions.patch  0004-Skbuff-vcounter-support.patch  0005-Sysctl-sock-variables.patch  0006-RADclock-export-of-packet-timestamps.patch  0006-RADclock-ioctl.patch  0007-RADclock-packets-timestamps.patch  0008-Syscall-get_vcounter-get_vcounter_latency.patch  0009-VDSO-get_vcounter.patch
kernel/linux/2.6.27/: 0001-Module-RADclock-driver.patch  0002-Clocksource-raw-virtual-counter.patch  0003-RADclock-ioctl-definitions.patch  0004-Skbuff-vcounter-support.patch  0005-Sysctl-sock-variables.patch  0006-RADclock-export-of-packet-timestamps.patch  0006-RADclock-ioctl.patch  0007-RADclock-packets-timestamps.patch  (+2 more)
kernel/linux/2.6.27-14/: 0001-Module-RADclock-driver.patch  0002-Clocksource-raw-virtual-counter.patch  0003-RADclock-ioctl-definitions.patch  0004-Skbuff-vcounter-support.patch  0005-Sysctl-sock-variables.patch  0006-RADclock-export-of-packet-timestamps.patch  0006-RADclock-ioctl.patch  0007-RADclock-packets-timestamps.patch  0008-Syscall-get_vcounter-get_vcounter_latency.patch  0009-VDSO-get_vcounter.patch
libradclock/: Makefile.am  ffkernel-fbsd.c  ffkernel-linux.c  ffkernel-none.c  kclock-fbsd.c  kclock-linux.c  kclock-none.c  kclock.h  linux-private.h  local-genetlink.h  logger.c  logger.h  pcap-fbsd.c  pcap-linux.c  pcap-none.c  radapi-base.c  radapi-getset.c  radapi-pcap.c  radapi-time.c  radclock-private.h  radclock-read.c  radclock-timepps.h  radclock.h  radkernel-fbsd.c  radkernel-linux.c  radkernel-none.c
man/: Makefile.am  radclock.8  radclock.conf.5
python-module/: radclockmodule.c  setup.py  test_radclockmodule.py
radclock/: Makefile.am  client_ntp.c  config_mgr.c  config_mgr.h  create_stamp.c  create_stamp.h  ffclock-fbsd.c  ffclock-linux.c  ffclock-none.c  ffclock.h  fixedpoint.c  fixedpoint.h  jdebug.h  misc.c  misc.h  ntohll.h  proto_ntp.h  pthread_ipcserver.c  pthread_mgr.c  pthread_mgr.h  pthread_ntpserver.c  pthread_rawdata.c  pthread_trigger.c  radclock_daemon.h  radclock_main.c  rawdata.c  rawdata.h  stampinput-ascii.c  stampinput-livepcap.c  stampinput-spy.c  stampinput-tracefile.c  stampinput.c  stampinput.h  stampinput_int.h  stampoutput.c  stampoutput.h  sync_algo.h  sync_bidir.c  sync_history.c  sync_history.h  (+3 more)
redhat/: radclock.init  radclock.spec
tests/: Makefile.am  test_shared_memory.c  test_timestamping.c
(+146 files in other folders)
